docs: add docs for /notifications endpoint
