# internal/controller/notification.go
@@ -19,6 +19,19 @@ func NewNotificationController(notificationService services.BaseNotificationServ
 	}
 }
 
+// GetNotification godoc
+//
+//	@Summary		Get notifications
+//	@Description	Retrieve a list of notifications
+//	@Tags			Notification
+//	@Produce		json
+//	@Param			limit	query		int		false	"Limit"		default(20)
+//	@Param			offset	query		int		false	"Offset"	default(0)
+//	@Success		200		{array}		util.SuccessResultResponse{result=[]dto.NotificationResponse}
+//	@Failure		400		{object}	util.ErrorResponse
+//	@Failure		500		{object}	util.ErrorResponse
+//	@Router			/notifications [get]
+//	@Security		Bearer
 func (nc *NotificationController) GetNotification(c *gin.Context) {
 	userID := c.MustGet("userID").(uuid.UUID)
 
